--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-3">
   <a class="navbar-brand" href="/">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+    aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -8,5 +9,16 @@
       <a class="nav-item nav-link" href="/">Home</a>
       <a class="nav-item nav-link" href="/about">About</a>
     </div>
+    <ul class="navbar-nav">
+      <li class="nav-item dropdown">
+        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" role="button">
+          course
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a href="#" class="dropdown-item">Course Add</a>
+          <a href="#" class="dropdown-item">Course delete</a>
+        </div>
+      </li>
+    </ul>
   </div>
 </nav>
