--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -9,14 +9,14 @@
       <a class="nav-item nav-link" href="/">Home</a>
       <a class="nav-item nav-link" href="/about">About</a>
     </div>
-    <ul class="navbar-nav">
+    <ul class="navbar-nav ml-3">
       <li class="nav-item dropdown">
         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="navbarDropdownMenuLink" role="button">
           course
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a href="#" class="dropdown-item">Course Add</a>
-          <a href="#" class="dropdown-item">Course delete</a>
+          <a href="/course" class="dropdown-item">Course Suggestion</a>
+          <a href="/course/add" class="dropdown-item">Course Add</a>
         </div>
       </li>
     </ul>
