update 'Add suggestion' and complete 'Edit Video suggestion'

--- a/views/course/add.handlebars
+++ b/views/course/add.handlebars
@@ -2,7 +2,7 @@
     <div class="alert alert-danger">{{text}}</div>
 {{/each}}
 <div class="card card-body">
-    <h3>Course Idea</h3>
+    <h3>Course Suggestion</h3>
     <form action="/course" method="post">
         <div class="form-group">
             <label for="name">Course Name</label>
