--- a/views/course/index.handlebars
+++ b/views/course/index.handlebars
@@ -2,7 +2,7 @@
 <div class="card card-body">
     <h3>{{CourseName}}</h3>
     <p>{{Description}}</p>
-    <p>{{Reason}}</p>
+    <p style="color:darkolivegreen">{{Reason}}</p>
     <div class="row">
         <div class="col-md-6 col-lg-6">
             <a href="/course/edit/{{id}}" class="btn btn-dark btn-block">Edit</a>
@@ -13,5 +13,5 @@
     </div>
 </div>
 {{else}}
-<p>No Course Ideas</p>
+<p>No Course Suggestion</p>
 {{/each}}
