--- a/views/course/index.handlebars
+++ b/views/course/index.handlebars
@@ -8,7 +8,10 @@
             <a href="/course/edit/{{id}}" class="btn btn-dark btn-block">Edit</a>
         </div>
         <div class="col-md-6 col-lg-6">
-            <a href="#" class="btn btn-dark btn-block">Delete</a>
+            <form action="/course/{{id}}?_method=DELETE" method="post">
+                <input type="hidden" name="_method" value="DELETE">
+                <input type="submit" class="btn btn-danger btn-block" value="Delete">
+            </form>
         </div>
     </div>
 </div>
